--- a/vignettes/ensembles.Rmd
+++ b/vignettes/ensembles.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 options(tibble.print_min = 4L, tibble.print_max = 4L)
+options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 # r2ogs5 ensembles
 
@@ -44,10 +45,14 @@ via `options`.
 
 ```{r}
 library(r2ogs5)
-options(r2ogs5.default_ogs5_bin =
-          "/home/phit0/Public/r2ogs/inst/ogs/ogs_fem")
+```
+```{r, echo= FALSE, eval=TRUE}
+options(r2ogs5.default_ogs5_bin = search_ogs5_bin_path(ogs_exe = "ogs_fem", return_ogs5_bin = TRUE))
 ```
 
+```{r, eval=FALSE}
+options(r2ogs5.default_ogs5_bin = "/usr/local/bin/ogs_fem")
+```
 Before setting up the ensemble, a base *ogs5* simulation has to be defined.
 The input files will be read in from an already set up simulation, whose input files should be in the directory specified in `temp_dir`. The same 
 hydraulic transport model is utilized as in `vignette("r2ogs5")`, for the creation of the
@@ -56,7 +61,132 @@ input files used here please refer to this vignette.
 temp_dir <- "tmp"
 ex1 <- create_ogs5(sim_name = "ex1", sim_id = 1L,
                    sim_path = temp_dir)
+```
 
+```{r, results='hide', eval = TRUE, echo=FALSE}
+ex <- create_ogs5(sim_name = "ex1", sim_id = 1L,
+                   sim_path = temp_dir)
+# this chunk is not visible in the vignette but ensures that the files exist in the
+# directory when the vignette is built.
+ex <- input_add_pcs_bloc(x=ex, pcs_name = "waterflow", PCS_TYPE = "LIQUID_FLOW",
+                          PRIMARY_VARIABLE = "PRESSURE1")
+ex <- input_add_pcs_bloc(x=ex, pcs_name = "tracer",
+                          PCS_TYPE = "MASS_TRANSPORT",
+                          PRIMARY_VARIABLE = "Tracer1",
+                          RELOAD = c("1", "1"))
+
+ex <- input_add_bc_bloc(x=ex, bc_name = "pressure_out",
+                         PRIMARY_VARIABLE = "PRESSURE1",
+                         DIS_TYPE = "CONSTANT 9810",
+                         PCS_TYPE = "LIQUID_FLOW",
+                         GEO_TYPE = "POINT point1")
+
+ex <- input_add_bc_bloc(x=ex, bc_name = "tracer_in",
+                         PRIMARY_VARIABLE = "Tracer",
+                         DIS_TYPE = "CONSTANT 1.19438",
+                         PCS_TYPE = "MASS_TRANSPORT",
+                         GEO_TYPE = "POINT point0",
+                         TIM_TYPE = "CURVE 1")
+
+ex <- input_add_ic_bloc(x = ex, ic_name = "pressure",
+                         PCS_TYPE = "LIQUID_FLOW",
+                         PRIMARY_VARIABLE = "PRESSURE1",
+                         GEO_TYPE = "DOMAIN",
+                         DIS_TYPE = "CONSTANT 9810")
+
+ex <- input_add_ic_bloc(x = ex, ic_name = "tracer",
+                         PCS_TYPE = "MASS_TRANSPORT",
+                         PRIMARY_VARIABLE = "Tracer",
+                         GEO_TYPE = "DOMAIN",
+                         DIS_TYPE = "CONSTANT 0.0")
+
+ex <- input_add_mcp_bloc(x = ex,
+                          NAME = "Tracer",
+                          MOBILE = 1)
+
+ex <- input_add_mfp_bloc(x = ex, FLUID_NAME = "water",
+                          FLUID_TYPE = "LIQUID",
+                          DENSITY = "1 1.0E+3",
+                          VISCOSITY = "1 1.0E-3")
+
+ex <- input_add_mmp_bloc(x = ex, GEOMETRY_DIMENSION = "1",
+                          GEOMETRY_AREA = "1.2",
+                          POROSITY = "1 0.38",
+                          PERMEABILITY_TENSOR = "ISOTROPIC 1.0E-8",
+                          MASS_DISPERSION = "1 1.0",
+                          TORTUOSITY = "1 1.0",
+                          NAME = "gravel")
+
+ex <- input_add_msp_bloc(x = ex, NAME = "gravel" ,
+                          DENSITY = "1 1.8E+3")
+
+ex <- input_add_num_bloc(x = ex, num_name = "waterflow",
+                          PCS_TYPE = "LIQUID_FLOW",
+                          LINEAR_SOLVER = "2 6 1.0E-14 100 1.0 100 4")
+
+ex <- input_add_num_bloc(x = ex, num_name = "tracer",
+                          PCS_TYPE = "MASS_TRANSPORT",
+                          LINEAR_SOLVER = "2 6 1.0E-14 100 1.0 100 4")
+
+ex <- input_add_out_bloc(x = ex, out_name = "waterflow",
+                          PCS_TYPE = "LIQUID_FLOW",
+                          NOD_VALUES = "PRESSURE1\n VELOCITY_X1",
+                          GEO_TYPE = "DOMAIN",
+                          DAT_TYPE = "PVD",
+                          TIM_TYPE = "STEPS 10")
+
+ex <- input_add_out_bloc(x = ex, out_name = "tracer",
+                          PCS_TYPE = "MASS_TRANSPORT",
+                          NOD_VALUES = "Tracer",
+                          GEO_TYPE = "DOMAIN",
+                          DAT_TYPE = "PVD",
+                          TIM_TYPE = "STEPS 10")
+
+ex <- input_add_out_bloc(x = ex, out_name = "tracer_tec",
+                          PCS_TYPE = "MASS_TRANSPORT",
+                          NOD_VALUES = "Tracer",
+                          GEO_TYPE = "DOMAIN",
+                          DAT_TYPE = "TECPLOT", TIM_TYPE = "STEPS 1")
+
+ex <- input_add_st_bloc(x = ex, st_name = "waterflow",
+                         PCS_TYPE = "LIQUID_FLOW",
+                         PRIMARY_VARIABLE = "PRESSURE1",
+                         GEO_TYPE = "POINT point0",
+                         DIS_TYPE = "CONSTANT_NEUMANN 7.8611E-06")
+
+ex <- input_add_tim_bloc(x = ex,  tim_name = "waterflow",
+                          PCS_TYPE = "LIQUID_FLOW",
+                          TIME_START = "0",
+                          TIME_END = "36000000",
+                          TIME_STEPS = "229 3600")
+
+ex <- input_add_tim_bloc(x = ex,  tim_name = "tracer",
+                          PCS_TYPE = "MASS_TRANSPORT",
+                          TIME_START = "0",
+                          TIME_END = "36000000",
+                          TIME_STEPS = "229 3600")
+
+ex <- input_add_rfd_bloc(x = ex, rfd_name = "tracer",
+                          mkey = "CURVES",
+                          data = tibble::tibble(
+                            time = c(0, 3600, 3600.1, 720, 36000000),
+                            conc = c(1,1,0,0,0)))
+ex <- input_add_gli_points(x = ex,
+                            ogs5_points = tibble::tibble(
+                              x = c(0, 4.7),
+                              y = c(0,0),
+                              z = c(0,0),
+                              name = c("point0", "point1")))
+# ad msh bloc
+mesh_lst <- create_structured_mesh_nodes_ele(lx = 4.7, nx = 94)
+ex <- input_add_msh_bloc(x = ex, msh_name = "base_mesh",
+                          NODES = mesh_lst$NODES,
+                          ELEMENTS = mesh_lst$ELEMENTS) 
+ogs5_write_inputfiles(ex, type = "all")
+```
+
+
+```{r, results='hide'}
 ex1 <- input_add_blocs_from_file(
   ogs5_obj = ex1, 
   sim_basename = "ex1",
